[workspace]
members = [
    "common",
    "basic",
    "preset_views",
    "orthographic",
    "follow_target",
    "fit_bounds",
    "touch_viewer",
    "product_viewer",
    "level_editor",
    "lab",
]
resolver = "3"

[workspace.dependencies]
bevy = "0.18"
saddle-camera-orbit-camera = { path = ".." }

[workspace.lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
nonstandard_macro_braces = "warn"
