[package]
name = "saddle-camera-orbit-camera-example-follow-target"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
bevy = { workspace = true }
saddle-camera-orbit-camera = { workspace = true }
saddle-camera-orbit-camera-example-common = { path = "../common" }

[lints]
workspace = true
