[package]
name = "saddle-camera-orbit-camera-example-touch-viewer"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
bevy = { workspace = true }
bevy_flair = "0.7"
bevy_input_focus = "0.18"
bevy_ui_widgets = "0.18"
saddle-camera-orbit-camera = { workspace = true }
saddle-pane = { git = "https://github.com/julien-blanchon/saddle-pane" }

[lints]
workspace = true
